modificador archivos fuente

--- a/predictmodel/src/Additional_functions.ipynb
+++ b/predictmodel/src/Additional_functions.ipynb
@@ -21,7 +21,9 @@
     "import joblib\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import xgboost as xgb\n",
+    "from xgboost import XGBRegressor"
    ]
   },
   {
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5e2a0abe",
    "metadata": {},
    "outputs": [
@@ -386,12 +388,311 @@
    "cell_type": "markdown",
    "id": "68bde6f0",
    "metadata": {},
-   "source": []
+   "source": [
+    "## API Service for Frontend Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1b6790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API imports\n",
+    "from fastapi import FastAPI, HTTPException\n",
+    "from pydantic import BaseModel\n",
+    "import uvicorn\n",
+    "from typing import List, Dict, Any\n",
+    "import os\n",
+    "import json\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "451097db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Request and Response Models\n",
+    "class PredictionRequest(BaseModel):\n",
+    "    latitude: float\n",
+    "    longitude: float\n",
+    "    date: str  # Format: YYYY-MM-DD\n",
+    "    radius_km: float = 50\n",
+    "    num_points: int = 100\n",
+    "\n",
+    "class PredictionResponse(BaseModel):\n",
+    "    status: str\n",
+    "    data: List[Dict[str, Any]]\n",
+    "    metadata: Dict[str, Any]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d50d5839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize FastAPI app\n",
+    "app = FastAPI(\n",
+    "    title=\"Air Quality Prediction API\",\n",
+    "    description=\"API for predicting air quality based on location and date\",\n",
+    "    version=\"1.0.0\"\n",
+    ")\n",
+    "\n",
+    "# Configure model paths\n",
+    "MODEL_PATHS = {\n",
+    "    'CO': '../models/CO_model.pkl',\n",
+    "    'O3': '../models/O3_model.pkl',\n",
+    "    'NO2': '../models/NO2_model.pkl',\n",
+    "    'SO2': '../models/SO2_model.pkl',\n",
+    "    'PM25': '../models/PM25_model.pkl',\n",
+    "    'PM10': '../models/PM10_model.pkl'\n",
+    "}\n",
+    "\n",
+    "# Ensure models directory exists\n",
+    "os.makedirs('../models', exist_ok=True)\n",
+    "os.makedirs('../output', exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe513473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enhanced Make_Prediction_API function\n",
+    "def Make_Prediction_API(latitude: float, longitude: float, date: str, radius_km: float = 50, num_points: int = 100):\n",
+    "    \"\"\"\n",
+    "    Generate air quality predictions for API response.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    latitude (float): Latitude of the center point.\n",
+    "    longitude (float): Longitude of the center point.\n",
+    "    date (str): Date in 'YYYY-MM-DD' format.\n",
+    "    radius_km (float): Radius of the circle in kilometers. Default is 50 km.\n",
+    "    num_points (int): Number of points to generate. Default is 100.\n",
+    "    \n",
+    "    Returns:\n",
+    "    dict: Dictionary containing predictions and metadata.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Validate date format\n",
+    "        datetime.strptime(date, \"%Y-%m-%d\")\n",
+    "        \n",
+    "        # Gas name array (matching model order)\n",
+    "        gas_names = ['CO', 'O3', 'NO2', 'SO2', 'PM25', 'PM10']\n",
+    "        route_array = [MODEL_PATHS[gas] for gas in gas_names]\n",
+    "        \n",
+    "        # Check if all model files exist\n",
+    "        missing_models = []\n",
+    "        for gas, path in MODEL_PATHS.items():\n",
+    "            if not os.path.exists(path):\n",
+    "                missing_models.append(gas)\n",
+    "        \n",
+    "        if missing_models:\n",
+    "            return {\n",
+    "                \"error\": f\"Missing model files for: {', '.join(missing_models)}\",\n",
+    "                \"available_models\": [gas for gas in gas_names if gas not in missing_models]\n",
+    "            }\n",
+    "        \n",
+    "        # Create prediction dataset\n",
+    "        training_dataset, processed_date = Make_Prediction_Dataset(latitude, longitude, date, radius_km, num_points)\n",
+    "        dataset = training_dataset.copy()\n",
+    "        \n",
+    "        # Generate predictions for each gas\n",
+    "        predictions = {}\n",
+    "        for i, route in enumerate(route_array):\n",
+    "            try:\n",
+    "                model = joblib.load(route)\n",
+    "                gas_predictions = model.predict(training_dataset)\n",
+    "                predictions[f'Predictions_{gas_names[i]}'] = gas_predictions.tolist()\n",
+    "                dataset[f'Predictions_{gas_names[i]}'] = gas_predictions\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error loading model {gas_names[i]}: {str(e)}\")\n",
+    "                continue\n",
+    "        \n",
+    "        # Calculate AQI\n",
+    "        breakpointsAQI = {\n",
+    "            'Predictions_O3': [0, 55, 71, 86, 106, 201, 301, 401, 501],\n",
+    "            'Predictions_PM25': [0.0, 12.1, 35.5, 55.5, 150.5, 250.5, 350.5, 500.5],\n",
+    "            'Predictions_PM10': [0, 55, 155, 255, 355, 425, 505, 605, 1000],\n",
+    "            'Predictions_CO': [0.0, 4.5, 9.5, 12.5, 15.5, 30.5, 40.5, 50.5, 60.5],\n",
+    "            'Predictions_SO2': [0, 36, 76, 186, 305, 605, 805, 1005, 2000],\n",
+    "            'Predictions_NO2': [0, 54, 101, 361, 650, 1250, 1650, 2050, 3000]\n",
+    "        }\n",
+    "        \n",
+    "        # Only calculate AQI if we have predictions for all gases\n",
+    "        if len(predictions) == len(gas_names):\n",
+    "            aqi_values = calculateAQI(dataset, breakpointsAQI)\n",
+    "            dataset['AQI'] = aqi_values\n",
+    "        \n",
+    "        # Prepare output dataset\n",
+    "        output_dataset = dataset[['Latitude', 'Longitude']].copy()\n",
+    "        output_dataset['Date'] = processed_date\n",
+    "        \n",
+    "        # Add predictions\n",
+    "        for gas in gas_names:\n",
+    "            pred_col = f'Predictions_{gas}'\n",
+    "            if pred_col in dataset.columns:\n",
+    "                output_dataset[pred_col] = dataset[pred_col]\n",
+    "        \n",
+    "        # Add AQI if calculated\n",
+    "        if 'AQI' in dataset.columns:\n",
+    "            output_dataset['AQI'] = dataset['AQI']\n",
+    "        \n",
+    "        # Convert to list of dictionaries for JSON response\n",
+    "        result_data = output_dataset.to_dict('records')\n",
+    "        \n",
+    "        # Prepare metadata\n",
+    "        metadata = {\n",
+    "            \"center_point\": {\"latitude\": latitude, \"longitude\": longitude},\n",
+    "            \"date\": date,\n",
+    "            \"radius_km\": radius_km,\n",
+    "            \"num_points\": num_points,\n",
+    "            \"total_predictions\": len(result_data),\n",
+    "            \"available_pollutants\": gas_names,\n",
+    "            \"aqi_calculated\": 'AQI' in output_dataset.columns\n",
+    "        }\n",
+    "        \n",
+    "        return {\n",
+    "            \"status\": \"success\",\n",
+    "            \"data\": result_data,\n",
+    "            \"metadata\": metadata\n",
+    "        }\n",
+    "        \n",
+    "    except ValueError as e:\n",
+    "        return {\"error\": f\"Invalid date format. Use YYYY-MM-DD: {str(e)}\"}\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": f\"Prediction failed: {str(e)}\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "746a56d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Endpoints\n",
+    "@app.get(\"/\")\n",
+    "async def root():\n",
+    "    return {\n",
+    "        \"message\": \"Air Quality Prediction API\",\n",
+    "        \"version\": \"1.0.0\",\n",
+    "        \"endpoints\": {\n",
+    "            \"/predict\": \"POST - Generate air quality predictions\",\n",
+    "            \"/health\": \"GET - Check API health\",\n",
+    "            \"/models\": \"GET - Check available models\"\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "@app.get(\"/health\")\n",
+    "async def health_check():\n",
+    "    return {\"status\": \"healthy\", \"timestamp\": datetime.now().isoformat()}\n",
+    "\n",
+    "@app.get(\"/models\")\n",
+    "async def check_models():\n",
+    "    model_status = {}\n",
+    "    for gas, path in MODEL_PATHS.items():\n",
+    "        model_status[gas] = {\n",
+    "            \"path\": path,\n",
+    "            \"exists\": os.path.exists(path)\n",
+    "        }\n",
+    "    return {\"models\": model_status}\n",
+    "\n",
+    "@app.post(\"/predict\", response_model=PredictionResponse)\n",
+    "async def predict_air_quality(request: PredictionRequest):\n",
+    "    \"\"\"\n",
+    "    Generate air quality predictions for a given location and date.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - latitude: Latitude of the center point\n",
+    "    - longitude: Longitude of the center point  \n",
+    "    - date: Date in YYYY-MM-DD format\n",
+    "    - radius_km: Radius of the circle in kilometers (default: 50)\n",
+    "    - num_points: Number of points to generate (default: 100)\n",
+    "    \n",
+    "    Returns:\n",
+    "    - Prediction data with AQI values for the specified area\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        result = Make_Prediction_API(\n",
+    "            latitude=request.latitude,\n",
+    "            longitude=request.longitude,\n",
+    "            date=request.date,\n",
+    "            radius_km=request.radius_km,\n",
+    "            num_points=request.num_points\n",
+    "        )\n",
+    "        \n",
+    "        if \"error\" in result:\n",
+    "            raise HTTPException(status_code=400, detail=result[\"error\"])\n",
+    "        \n",
+    "        return PredictionResponse(**result)\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        raise HTTPException(status_code=500, detail=f\"Internal server error: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88df0596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to run the API server\n",
+    "def run_api_server(host: str = \"0.0.0.0\", port: int = 8000):\n",
+    "    \"\"\"\n",
+    "    Run the FastAPI server.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    host (str): Host to bind to (default: \"0.0.0.0\")\n",
+    "    port (int): Port to bind to (default: 8000)\n",
+    "    \"\"\"\n",
+    "    print(f\"Starting Air Quality Prediction API on {host}:{port}\")\n",
+    "    print(f\"API Documentation will be available at: http://{host}:{port}/docs\")\n",
+    "    print(f\"API Redoc will be available at: http://{host}:{port}/redoc\")\n",
+    "    \n",
+    "    uvicorn.run(app, host=host, port=port, log_level=\"info\")\n",
+    "\n",
+    "# Alternative: Run server in background (for Jupyter)\n",
+    "def run_api_background(host: str = \"127.0.0.1\", port: int = 8000):\n",
+    "    \"\"\"\n",
+    "    Run the API server in background (useful for Jupyter notebooks).\n",
+    "    \"\"\"\n",
+    "    import threading\n",
+    "    \n",
+    "    def start_server():\n",
+    "        uvicorn.run(app, host=host, port=port, log_level=\"info\")\n",
+    "    \n",
+    "    server_thread = threading.Thread(target=start_server, daemon=True)\n",
+    "    server_thread.start()\n",
+    "    \n",
+    "    print(f\"API server started in background on {host}:{port}\")\n",
+    "    print(f\"API Documentation: http://{host}:{port}/docs\")\n",
+    "    print(f\"API Redoc: http://{host}:{port}/redoc\")\n",
+    "    \n",
+    "    return server_thread"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad03172d",
+   "metadata": {},
+   "source": [
+    "### API Testing Examples"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.11.6)",
+   "display_name": "predictmodel_env_312",
    "language": "python",
    "name": "python3"
   },
@@ -405,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
