añadida api para frontend

--- a/predictmodel/src/Additional_functions.ipynb
+++ b/predictmodel/src/Additional_functions.ipynb
@@ -688,6 +688,30 @@
    "source": [
     "### API Testing Examples"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ec9b863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Start API in background (for Jupyter)\n",
+    "# Uncomment to run in notebook\n",
+    "# run_api_background(host=\"127.0.0.1\", port=8000)\n",
+    "\n",
+    "# Example: Test API with requests\n",
+    "# import requests\n",
+    "# response = requests.post(\n",
+    "#     \"http://127.0.0.1:8000/predict\",\n",
+    "#     json={\n",
+    "#         \"latitude\": 40.7128,\n",
+    "#         \"longitude\": -74.0060,\n",
+    "#         \"date\": \"2023-06-15\"\n",
+    "#     }\n",
+    "# )\n",
+    "# print(response.json())"
+   ]
   }
  ],
  "metadata": {
